<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_10sdp"
    app:cardElevation="@dimen/_2sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:contentDescription="@string/image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="vertical">

            <com.hspl.imgur_app.core.CustomTextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:font_name="bold" />

            <com.hspl.imgur_app.core.CustomTextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:font_name="regular" />

            <com.hspl.imgur_app.core.CustomTextView
                android:id="@+id/txt_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_count"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:font_name="regular" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>