<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_2sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.hspl.imgur_app.core.CustomTextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/exit"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:font_name="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/colorDivider" />

            <com.hspl.imgur_app.core.CustomTextView
                android:id="@+id/txt_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/do_you_really_want_to_n_exit_form_app"
                android:textAlignment="center"
                android:textColor="@color/colorEditTextHint"
                android:textSize="15sp"
                app:font_name="regular" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <com.hspl.imgur_app.core.CustomTextView
                    android:id="@+id/txt_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textColor="@color/colorEditTextHint"
                    android:textSize="14sp"
                    app:font_name="regular" />

                <View
                    android:layout_width="@dimen/_2sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/colorBlack" />

                <com.hspl.imgur_app.core.CustomTextView
                    android:id="@+id/txt_yes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:textColor="@color/colorEditTextHint"
                    android:textSize="14sp"
                    app:font_name="regular" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>