<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreen"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:id="@+id/linear_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_toolbar"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">

        <com.hspl.imgur_app.core.CustomEditText
            android:id="@+id/edt_search"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_weight="1"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/search_image_here"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:selectAllOnFocus="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorEditTextHint"
            app:font_name="regular" />

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_action_search" />

    </LinearLayout>

    <View
        android:id="@+id/search_view_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_below="@+id/linear_search"
        android:background="@color/colorDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_view_divider"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_50sdp"
        app:cardElevation="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingBottom="@dimen/_5sdp">

            <com.hspl.imgur_app.core.CustomTextView
                android:id="@+id/txt_list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_view"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                app:font_name="regular" />

            <ImageView
                android:id="@+id/img_list_view"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:contentDescription="@string/list_view"
                android:src="@drawable/ic_action_list_view_green" />

            <View
                android:layout_width="@dimen/_2sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/colorBlack" />

            <com.hspl.imgur_app.core.CustomTextView
                android:id="@+id/txt_grid_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid_view"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:font_name="regular" />

            <ImageView
                android:id="@+id/img_grid_view"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:contentDescription="@string/grid_view"
                android:src="@drawable/ic_action_grid_view" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>